- 2nd attempt fixing size on mobile

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -196,24 +196,31 @@ img.header-image {
 	margin-right: 10px;
 
 	@media (max-width: 576px) {
-		width: 30px;
-		height: 30px;
-		margin-top: -5px;
+		width: 24px !important;
+		height: 24px !important;
+		margin-top: -2px;
 		margin-right: 5px;
 	}
 }
 
 .header-title-logo {
 	height: 38px;
+	width: auto;
+	max-width: 100%;
 
 	@media (max-width: 576px) {
-		height: 28px;
+		height: 20px !important;
 	}
 }
 
 .navbar-brand {
+	display: flex;
+	align-items: center;
+	white-space: nowrap;
+
 	@media (max-width: 576px) {
 		margin-right: 0.25rem;
+		max-width: 75%;
 	}
 }
 
@@ -231,8 +238,9 @@ img.header-image {
 
 .navbar > .container {
 	@media (max-width: 576px) {
-		padding-left: 0.75rem;
-		padding-right: 0.75rem;
+		padding-left: 0.5rem;
+		padding-right: 0.5rem;
+		flex-wrap: nowrap !important;
 	}
 }
 
